# System

./: .bochsrc  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  MEDIA_LICENSE.md  Makefile  README.md  build.config  build.config.cmake  build.config.mk  docker-compose.yml
.circle-ci/: config.yml
.circleci/: Dockerfile  config.yml  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  request-documentation.md  review-and-enhancement.md
arch/i386/: CMakeLists.txt  architecture.mk  generic.ld  i386.ld  i386_entry.c  kernel.c  make.config  memlayout.c  timer.c
arch/i386/boot/: bootloader32_print.s  multiboot.s
arch/i386/cpu/: cr.c  dump_regs.c  gdt.c  idt.c  isr.c
arch/i386/cpu/apic/: apic.c  apic.h
arch/i386/cpu/init/: init_gdt.c  init_idt.c
arch/i386/cpu/mmu/: frame.c  mmu.c  page.c
arch/i386/cpu/pic/: pic.c
arch/i386/cpu/registers/: cr.c  msr.c  msr.h
arch/i386/drivers/monitor/: init.c  monitor.c  monitor.h
arch/i386/drivers/timer_example/: timer.c
arch/i386/include/arch/: hal.h  init.h  ld.h  memlayout.h  paging.h  physical_memory.h  timer.h
arch/i386/include/cpu/: cr.h  gdt.h  idt.h  isr.h  mmu.h  pic.h
arch/i386/include/drivers/: monitor.h
arch/i386/include/kernel/: va_arg.h
arch/i386/init/: cert0.asm  gdt_init.c  init.h  monitor_init.c
arch/i386/init_code/: multiboot.s
arch/i386/kernel/: kernel.c  timer.c
arch/i386/kernel/init/: monitor_init.c
arch/i386/kernel/logs/: log.c
arch/i386/memory/: memory_init.c  memory_layout.c  physical.h  virtual.h
arch/i386/memory/boot/: boot_memory.h  boot_paging.c
arch/i386/memory/physical/: alloc.c  init.c  physical_memory.c  physical_memory_init.c
arch/i386/memory/virtual/: alloc_pages.c  heap.c  init.c  map.c  mmap.c  page_fault_handler.c  pagefault_handler.c  paging.c  translate.c  virtual_memory_init.c
arch/i386/multiboot/: multiboot.s
arch/i386/paging/: init.c  map.c  pagefault_handler.c  translate.c
arch/i386/physical_memory/: init.c  physical_alloc.c  physical_memory.c  physical_memory.h
arch/i386/pic/: pic.c  ports.c
arch/i386/virtual_memory/: alloc_pages.c  init.c  map.c  pagefault_handler.c  paging.c  translate.c
arch/x86/: .gitignore  Makefile  link.ld
arch/x86/asm/: dt_flush.s  gdt_flush.s  idt_flush.s  init.s  interrupt.s  isr_proxy.s  kernel_entry.s
arch/x86/boot/: bootloader.s  bootloader32_print.s  bootloader_32bits_switch.s  bootloader_gdt.s  bootloader_print.s  bootloader_read_disk.s  multiboot.s
arch/x86/cpu/: cr.c  descriptors_table.h  gdt.h  idt.h  isr.c  isr.h  isr_handler.c  paging.c  pic.c
arch/x86/include/: netero.h
arch/x86/kernel/: kernel.c  (+1 more)
include/: netero.h  system.h
include/kernel/: compiler.h  heap.h  multiboot.h  panic.h  stdio.h  types.h
kernel/: CMakeLists.txt  heap.c  kernel.mk  main.c  make.config  printk.c
kernel/arch/i386/: CMakeLists.txt  README.md  i386_entry.c
kernel/arch/i386/cpu/: gdt.c  idt.c  isr.c
kernel/arch/i386/cpu/apic/: apic.c  apic.h
kernel/arch/i386/cpu/pic/: pic.c  pic_disable.asm  ports.c
kernel/arch/i386/cpu/registers/: cr.c  dump_regs.c  msr.c
kernel/arch/i386/drivers/monitor/: init.c  monitor.c  monitor.h
kernel/arch/i386/drivers/timer_example/: timer.c
kernel/arch/i386/include/arch/: io.h  ld.h  paging.h  ports.h
kernel/arch/i386/include/cpu/: gdt.h  idt.h  isr.h
kernel/arch/i386/init/: memlayout.asm
kernel/arch/i386/memory/: memory_init.c  memory_layout.c  physical.h  virtual.h
kernel/arch/i386/memory/boot/: boot_memory.h  boot_paging.c
kernel/arch/i386/memory/physical/: physical_memory.c  physical_memory_init.c
kernel/arch/i386/memory/virtual/: heap.c  mmap.c  page_fault_handler.c  paging.c  virtual_memory_init.c
kernel/include/: system.h
kernel/include/api/: mm.h
kernel/include/hal/: console.h  memory.h
kernel/include/kernel/: compiler.h  heap.h  log.h  memory.h  multiboot.h  panic.h  stdio.h  tty.h
kernel/io/: console.c  printf.c  printk.c
kernel/memory/: heap.c  malloc.c  vmalloc.c
kernel/multiboot/: multiboot.h  multiboot_types.h  physical_memory.c
kernel/srcs/: main.c
kernel/srcs/io/: console.c  printf.c
kernel/srcs/memory/: malloc.c
ld/: link_x86.ld
lib/: dependencies.config.mk
lib/c_abi/: CMakeLists.txt
lib/c_abi/include/: bitset.h  compiler.h  stdarg.h  stddef.h  stdint.h  stdlib.h  string.h  unistd.h
lib/c_abi/math/: div.c
lib/c_abi/stdlib/: abort.c
lib/c_abi/string/: memccpy.c  memory.c  strlen.c  strstr.c
lib/cpuid/: CMakeLists.txt  dependency.config
lib/cpuid/include/cpuid/: cpuid.h
lib/cpuid/srcs/: get_vendor_string.c
lib/cpuid/srcs/i386/: cpuid_get_capabilities.asm  cpuid_max.asm
lib/libc/: CMakeLists.txt  Makefile  dependency.config  dependency.mk  memccpy.c  memory.c  strlen.c  strstr.c
lib/libc/include/: bitset.h  compiler.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdlib.h  string.h  unistd.h  va_arg.h
lib/libc/math/: div.c
lib/libc/memory/: heapBMmalloc.c  heapBMmalloc.h  malloc.c
lib/libc/stdlib/: abort.c
lib/libc/string/: memccpy.c  memory.c  string.c  strlen.c  strstr.c
lib/libcpuid/: CMakeLists.txt
lib/libcpuid/include/cpuid/: cpuid.h
lib/libcpuid/srcs/: get_vendor_string.c
lib/libcpuid/srcs/i386/: cpuid_get_model_string.asm  cpuid_get_vendor.asm  cpuid_is_supported.asm  cpuid_max.asm
lib/libkalgotils/: CMakeLists.txt  README.md
lib/libkalgotils/include/algo/: list.h
lib/libkalgotils/include/utils/: container_of.h
lib/libkalgotils/srcs/: list.c
lib/system/: CMakeLists.txt
lib/system/include/system/: system.h
lib/system/include/system/allocator/: allocator.h  pool_allocator.h
lib/system/srcs/allocator/: allocator.c  pool_allocator.c
old/: Makefile
scipts/: header_asm.txt
scripts/: build-iso.sh  grub.cfg  header_c.txt
test/: heap.c  main.c  make.config  memccpy.c  strlen.c
tools/: build-iso.sh  create_build_dir  generate-grub-config.sh
tools/cmake/: build-header.cmake  iso-generation.cmake  load-dependencies.cmake  load-libraries.cmake  qemu-run.cmake
tools/config/: color.config.mk  toolchain.config.mk
tools/toolchains/: install
(+53 files in other folders)
